0024845: CLang warnings -Wunused-variable Unused variables were removed.